--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
+html, body {margin: 0; height: 100%; overflow: hidden}
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.TopDivider {
+  width: 100%;
+  height: 10px;
+  background-color: #6A687A;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.BottomDivider {
+  width: 100%;
+  height: 15px;
+  background-color: #6A687A;
+  position: fixed;
+  bottom: 0;
 }
